Update lab control

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -25,11 +25,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PLAY',\n",
+       " 'FILLING',\n",
+       " 'BAR',\n",
+       " 'THEATRE',\n",
+       " 'EASYGOING',\n",
+       " 'DATE',\n",
+       " 'LEAD',\n",
+       " 'THAT',\n",
+       " 'STORY',\n",
+       " 'ISLAND']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "uppercase_words = []\n",
+    "uppercase_words = [i.upper() for i in words]\n",
+    "\n",
+    "uppercase_words\n"
    ]
   },
   {
@@ -41,11 +65,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['filling', 'theatre', 'easygoing', 'story', 'island']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "words = ['play', 'filling', 'bar', 'theatre', 'easygoing', 'date', 'lead', 'that', 'story',  'island']\n",
+    "\n",
+    "# Mind blown:\n",
+    "long_words  = [i for i in words  if len(i) > 4]\n",
+    "\n",
+    "long_words "
    ]
   },
   {
@@ -57,11 +98,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first word starting with 't' is: theatre\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "words = ['play', 'filling', 'bar', 'theatre', 'easygoing', 'date', 'lead', 'that', 'story',  'island']\n",
+    "\n",
+    "for first_word in words:\n",
+    "    if first_word.startswith('t'):\n",
+    "        print(f\"The first word starting with 't' is: {first_word}\")\n",
+    "        break\n"
    ]
   },
   {
@@ -80,11 +135,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "squares = [num**2 for num in range(1,11)]\n",
+    "squares"
    ]
   },
   {
@@ -96,11 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 9, 25, 49, 81]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "squares_odds = [x**2 for x in range(1,11) if x %2 != 0]\n",
+    "squares_odds"
    ]
   },
   {
@@ -112,11 +193,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 81,\n",
+       " 289,\n",
+       " 625,\n",
+       " 1089,\n",
+       " 1681,\n",
+       " 2401,\n",
+       " 3249,\n",
+       " 4225,\n",
+       " 5329,\n",
+       " 6561,\n",
+       " 7921,\n",
+       " 9409,\n",
+       " 11025,\n",
+       " 12769,\n",
+       " 14641,\n",
+       " 16641,\n",
+       " 18769,\n",
+       " 21025,\n",
+       " 23409,\n",
+       " 25921,\n",
+       " 28561,\n",
+       " 31329,\n",
+       " 34225,\n",
+       " 37249,\n",
+       " 40401,\n",
+       " 43681,\n",
+       " 47089,\n",
+       " 50625,\n",
+       " 54289,\n",
+       " 58081,\n",
+       " 62001,\n",
+       " 66049,\n",
+       " 70225,\n",
+       " 74529,\n",
+       " 78961,\n",
+       " 83521,\n",
+       " 88209,\n",
+       " 93025,\n",
+       " 97969,\n",
+       " 103041,\n",
+       " 108241,\n",
+       " 113569,\n",
+       " 119025,\n",
+       " 124609,\n",
+       " 130321,\n",
+       " 136161,\n",
+       " 142129,\n",
+       " 148225,\n",
+       " 154449,\n",
+       " 160801,\n",
+       " 167281,\n",
+       " 173889,\n",
+       " 180625,\n",
+       " 187489,\n",
+       " 194481,\n",
+       " 201601,\n",
+       " 208849,\n",
+       " 216225,\n",
+       " 223729,\n",
+       " 231361,\n",
+       " 239121,\n",
+       " 247009,\n",
+       " 255025,\n",
+       " 263169,\n",
+       " 271441,\n",
+       " 279841,\n",
+       " 288369,\n",
+       " 297025,\n",
+       " 305809,\n",
+       " 314721,\n",
+       " 323761,\n",
+       " 332929,\n",
+       " 342225,\n",
+       " 351649,\n",
+       " 361201,\n",
+       " 370881,\n",
+       " 380689,\n",
+       " 390625,\n",
+       " 400689,\n",
+       " 410881,\n",
+       " 421201,\n",
+       " 431649,\n",
+       " 442225,\n",
+       " 452929,\n",
+       " 463761,\n",
+       " 474721,\n",
+       " 485809,\n",
+       " 497025,\n",
+       " 508369,\n",
+       " 519841,\n",
+       " 531441,\n",
+       " 543169,\n",
+       " 555025,\n",
+       " 567009,\n",
+       " 579121,\n",
+       " 591361,\n",
+       " 603729,\n",
+       " 616225,\n",
+       " 628849,\n",
+       " 641601,\n",
+       " 654481,\n",
+       " 667489,\n",
+       " 680625,\n",
+       " 693889,\n",
+       " 707281,\n",
+       " 720801,\n",
+       " 734449,\n",
+       " 748225,\n",
+       " 762129,\n",
+       " 776161,\n",
+       " 790321,\n",
+       " 804609,\n",
+       " 819025,\n",
+       " 833569,\n",
+       " 848241,\n",
+       " 863041,\n",
+       " 877969,\n",
+       " 893025,\n",
+       " 908209,\n",
+       " 923521,\n",
+       " 938961,\n",
+       " 954529,\n",
+       " 970225,\n",
+       " 986049]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "squares = [x**2 for x in range(1,999, 8)]\n",
+    "squares\n"
    ]
   },
   {
@@ -170,11 +388,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "people = [\n",
+    "    {\n",
+    "        \"name\": \"Juan\",\n",
+    "        \"age\": 34,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Pepe\",\n",
+    "        \"age\": 27,\n",
+    "        \"n_kids\": 0\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Sonia\",\n",
+    "        \"age\": 41,\n",
+    "        \"n_kids\": 1\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Lucía\",\n",
+    "        \"age\": 22,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Leo\",\n",
+    "        \"age\": 55,\n",
+    "        \"n_kids\": 5\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "num_people = len(people)\n",
+    "\n",
+    "num_people\n"
    ]
   },
   {
@@ -186,11 +446,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "people = [\n",
+    "    {\n",
+    "        \"name\": \"Juan\",\n",
+    "        \"age\": 34,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Pepe\",\n",
+    "        \"age\": 27,\n",
+    "        \"n_kids\": 0\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Sonia\",\n",
+    "        \"age\": 41,\n",
+    "        \"n_kids\": 1\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Lucía\",\n",
+    "        \"age\": 22,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Leo\",\n",
+    "        \"age\": 55,\n",
+    "        \"n_kids\": 5\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "people_kids = sum(1 for person in people if person[\"n_kids\"] >0)\n",
+    "\n",
+    "people_kids\n"
    ]
   },
   {
@@ -202,11 +505,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "people = [\n",
+    "    {\n",
+    "        \"name\": \"Juan\",\n",
+    "        \"age\": 34,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Pepe\",\n",
+    "        \"age\": 27,\n",
+    "        \"n_kids\": 0\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Sonia\",\n",
+    "        \"age\": 41,\n",
+    "        \"n_kids\": 1\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Lucía\",\n",
+    "        \"age\": 22,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Leo\",\n",
+    "        \"age\": 55,\n",
+    "        \"n_kids\": 5\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "total_kids = sum(person[\"n_kids\"] for person in people)\n",
+    "\n",
+    "total_kids\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -218,12 +565,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Juan', 'age': 35, 'n_kids': 2},\n",
+       " {'name': 'Pepe', 'age': 28, 'n_kids': 0},\n",
+       " {'name': 'Sonia', 'age': 42, 'n_kids': 2},\n",
+       " {'name': 'Lucía', 'age': 23, 'n_kids': 3},\n",
+       " {'name': 'Leo', 'age': 56, 'n_kids': 5}]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "update_people = [\n",
+    "    {\n",
+    "        \"name\": person[\"name\"], \n",
+    "        \"age\": person[\"age\"] + 1, \n",
+    "        \"n_kids\": person[\"n_kids\"] + (1 if person[\"name\"].endswith(\"a\") else 0)\n",
+    "    }\n",
+    "    for person in people\n",
+    "]\n",
+    "\n",
+    "update_people\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -242,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   },
   "toc": {
    "base_numbering": 1,
